--- a/customView/build.gradle
+++ b/customView/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    namespace 'com.example.agpreproduction.customview'
     compileSdkVersion BuildConfig.TARGET_SDK
 
     defaultConfig {
